# bio-pro

./: .gitignore  .mcp.json  LICENSE  README.md  package-lock.json
.github/workflows/: build-windows.yml  test.yml
backend/: .gitignore  bio_pro.spec  citations.py  main.py  mcp_server.py  ordering.py  requirements.txt
backend/assembly/: __init__.py  gibson.py  golden_gate.py
backend/compiler/: assembler.py  llm_compiler.py  llm_parser.py  llm_providers.py  parser.py  rules.py  validate.py
backend/export/: __init__.py  bundle.py  fasta.py  genbank.py  records.py  sbol.py
backend/models/: library.py  schemas.py
backend/routers/: __init__.py  llm.py  lsp.py  parts.py  sequence.py  simulation.py
backend/sequence/: __init__.py  core.py
backend/simulation/: ode.py  stochastic.py
backend/storage/: __init__.py  db.py  models.py  repo.py
backend/tests/: test_compiler.py  test_designs_api.py  test_export.py  test_phase3.py  test_validate.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  styles.css
scripts/: build-windows.bat
src/: .gitignore  bio_pro.spec  index.html  main.py  mcp_server.py  package-lock.json  package.json  requirements.txt  server_entry.py  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/data/: parts.json
src/shell/: ActivityBar.jsx  App.jsx  BottomPanel.jsx  CommandPalette.jsx  EditorArea.jsx  EditorGroup.jsx  PrimarySidebar.jsx  SecondarySidebar.jsx  Shell.jsx  (+7 more)
(+225 files in other folders)
