[package]
name = "bio-pro"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2" }
tauri-plugin-fs     = "2"
tauri-plugin-dialog = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
dirs       = "5"
reqwest    = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Windows-only: tie child-process lifetime to the Tauri process via a Job Object
# so the backend is killed even if Tauri crashes (not just on clean exit).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[profile.release]
# Trim final binary size without breaking anything.
opt-level = "s"
lto        = true
strip      = true
